[package]
name = "podcore"
version = "0.1.0"
authors = ["Brandur <brandur@brandur.org>"]

[lib]
name = "podcore"
path = "src/lib.rs"

[[bin]]
name = "podcore"
path = "src/bin/podcore/main.rs"

[dependencies]
isatty = "*"
chan = "*"
chrono = "0.4"
clap = "*"
diesel = { version = "1.0.0-rc1", features = ["chrono", "postgres"] }
error-chain = { version = "*" }
futures = "0.1"
hyper = "0.11"
hyper-tls = "*"

# Locking iron/mount to particular versions because the HTTP-related packages
# don't seem to play nicely together.
iron = "0.5.1"
mount = "^0.3.0"

juniper = "*"
juniper_iron = "*"
lazy_static = "1.0"
native-tls = "*"

# This is needed to make sure that Cargo statically links against `libssl`.
# This should happen automatically, but it doesn't.
#
# At some point, double-check that this is still the case in the README of
# emk/rust-musl-builder.
openssl-sys = "0.9"

quick-xml = "0.10.1"
r2d2 = { version = "*" }
r2d2-diesel = { version = "1.0.0-rc1" }
rand = "0.4"
regex = "0.2"
rust-crypto = "^0.2"
serde = { version = "1.0.24" }
serde_derive = "*"
serde_json = { version = "1.0.8" }
slog = "*"
slog-async = "*"
slog-term = "*"
time = { version = "*" }
tokio-core = "0.1"
url = "*"
uuid = { version = "0.5", features = ["v4"] }

[patch.crates-io]
# This is needed to handle cross-compilation of libpq.
#
# At some point, double-check that this is still the case in the README of
# emk/rust-musl-builder.
pq-sys = { git = 'https://github.com/golddranks/pq-sys' }
